python/cudf/bindings/cudf_cpp.pxd


    cdef gdf_error gdf_sub_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_sub_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_sub_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_sub_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_sub_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_mul_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_mul_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_mul_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_mul_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_mul_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_floordiv_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_floordiv_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_floordiv_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_floordiv_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_floordiv_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_div_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_div_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_div_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_gt_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_gt_i8(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_gt_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_gt_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_gt_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_gt_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_ge_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ge_i8(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ge_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ge_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ge_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ge_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_lt_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_lt_i8(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_lt_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_lt_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_lt_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_lt_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_le_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_le_i8(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_le_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_le_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_le_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_le_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_eq_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_eq_i8(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_eq_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_eq_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_eq_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_eq_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_ne_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ne_i8(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ne_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ne_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ne_f32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_ne_f64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_bitwise_and_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_bitwise_and_i8(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_bitwise_and_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_bitwise_and_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_bitwise_or_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_bitwise_or_i8(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_bitwise_or_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_bitwise_or_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_bitwise_xor_generic(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_bitwise_xor_i8(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_bitwise_xor_i32(gdf_column *lhs, gdf_column *rhs, gdf_column *output)
    cdef gdf_error gdf_bitwise_xor_i64(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gdf_validity_and(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef unsigned int gdf_reduce_optimal_output_size()

    cdef gdf_error gdf_sum(gdf_column *col, void *dev_result, gdf_size_type dev_result_size)
    cdef gdf_error gdf_product(gdf_column *col, void *dev_result, gdf_size_type dev_result_size)
    cdef gdf_error gdf_sum_of_squares(gdf_column *col, void *dev_result, gdf_size_type dev_result_size)
    cdef gdf_error gdf_min(gdf_column *col, void *dev_result, gdf_size_type dev_result_size)
    cdef gdf_error gdf_max(gdf_column *col, void *dev_result, gdf_size_type dev_result_size)
    
    cdef gdf_error gpu_comparison_static_i8(gdf_column *lhs, int8_t value, gdf_column *output,gdf_comparison_operator operation)
    cdef gdf_error gpu_comparison_static_i16(gdf_column *lhs, int16_t value, gdf_column *output,gdf_comparison_operator operation)
    cdef gdf_error gpu_comparison_static_i32(gdf_column *lhs, int32_t value, gdf_column *output,gdf_comparison_operator operation)
    cdef gdf_error gpu_comparison_static_i64(gdf_column *lhs, int64_t value, gdf_column *output,gdf_comparison_operator operation)
    cdef gdf_error gpu_comparison_static_f32(gdf_column *lhs, float value, gdf_column *output,gdf_comparison_operator operation)
    cdef gdf_error gpu_comparison_static_f64(gdf_column *lhs, double value, gdf_column *output,gdf_comparison_operator operation)

    cdef gdf_error gpu_comparison(gdf_column *lhs, gdf_column *rhs, gdf_column *output,gdf_comparison_operator operation)

    cdef gdf_error gpu_apply_stencil(gdf_column *lhs, gdf_column * stencil, gdf_column * output)

    cdef gdf_error gpu_concat(gdf_column *lhs, gdf_column *rhs, gdf_column *output)

    cdef gdf_error gpu_hash_columns(gdf_column ** columns_to_hash, int num_columns, gdf_column * output_column, void * stream)

    cdef gdf_error get_column_byte_width(gdf_column * col, int * width)

    cdef gdf_error gdf_order_by(gdf_column** input_columns,
                                int8_t* asc_desc,
                                size_t num_inputs,
                                gdf_column* output_indices,
                                int flag_nulls_are_smallest)

    cdef gdf_error gdf_filter(size_t nrows,
                 gdf_column* cols,
                 size_t ncols,
                 void** d_cols,
                 int* d_types,
                 void** d_vals,
                 size_t* d_indx,
                 size_t* new_sz)

    cdef gdf_error gdf_group_by_sum(int ncols,
                               gdf_column** cols,
                               gdf_column* col_agg,
                               gdf_column* out_col_indices,
                               gdf_column** out_col_values,

                               gdf_column* out_col_agg,
                               gdf_context* ctxt)

    cdef gdf_error gdf_group_by_min(int ncols,
                               gdf_column** cols,
                               gdf_column* col_agg,
                               gdf_column* out_col_indices,
                               gdf_column** out_col_values,

                               gdf_column* out_col_agg,
                               gdf_context* ctxt)


    cdef gdf_error gdf_group_by_max(int ncols,
                               gdf_column** cols,
                               gdf_column* col_agg,
                               gdf_column* out_col_indices,
                               gdf_column** out_col_values,

                               gdf_column* out_col_agg,
                               gdf_context* ctxt)


    cdef gdf_error gdf_group_by_avg(int ncols,
                               gdf_column** cols,
                               gdf_column* col_agg,
                               gdf_column* out_col_indices,
                               gdf_column** out_col_values,

                               gdf_column* out_col_agg,
                               gdf_context* ctxt)

    cdef gdf_error gdf_group_by_count(int ncols,
                                 gdf_column** cols,
                                 gdf_column* col_agg,
                                 gdf_column* out_col_indices,
                                 gdf_column** out_col_values,

                                 gdf_column* out_col_agg,
                                 gdf_context* ctxt)

    cdef gdf_error gdf_quantile_exact(   gdf_column*         col_in,
                                    gdf_quantile_method prec,
                                    double              q,
                                    void*               t_erased_res,


                                    gdf_context*        ctxt)

    cdef gdf_error gdf_quantile_aprrox(  gdf_column*  col_in,
                                    double       q,
                                    void*        t_erased_res,
                                    gdf_context* ctxt)


    cdef gdf_error gdf_find_and_replace_all(gdf_column*       col,
                                   gdf_column* old_values,
                                   gdf_column* new_values);

